# douyinks

./: .env.example  .gitignore  README.en.md  README.md  douyin_links2.txt  kuaishou_liked.jsonl  mydouyin2.html  pyproject.toml
docs/: mobile-sync-api.md
extension/: background.js  cdp.js  manifest.json  popup.html
src/douyinks/: __init__.py  bot.py  browser.py  commands.py  config.py  daemon.py  downloader.py  history.py  main.py  network.py  supervisor.py  sync_server.py  sync_state.py  sync_transfer.py  transient_services.py  unknown_redownload.py
tests/: test_bot.py  test_commands.py  test_config.py  test_douyin_detail.py  test_douyin_link_batch.py  test_download_dedup.py  test_downloader.py  test_history.py  test_kuaishou_liked_batch.py  test_network.py  test_supervisor.py  test_sync_server.py  test_sync_state.py  test_transient_services.py  test_unknown_redownload.py
