[project]
name = "douyinks"
version = "0.1.0"
description = "Matrix-triggered Douyin and Kuaishou video downloader"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
    "httpx>=0.27",
    "matrix-nio>=0.25.2",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
douyinks = "douyinks.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/douyinks"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
